deployment/ntp_server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: ntp-server
  name: ntp-server
spec:
  type: NodePort
  ports:
    - name: "1234"
      port: 1234
      protocol: UDP
      targetPort: 1234
  selector:
    io.kompose.service: ntp-server
status:
  loadBalancer: {}
